Collaboration extension ChangeLog
=================================

VERSION 1.31
  FEATURES:
	FR #13057: Information about last edit of a comment
  CHANGES:
	FR #13548: Small GUI improvements
	Issue 12823: Added average rating per article
  BUGFIXES:
	Issue 14050: Changed GUI regarding the user edit right.

VERSION 1.30

  FEATURES:
	FR #12230: Added a global var (in CE_Initialize.php) to enable/disable the rating mechanism
	FR #12417: Clicking on the link "Hide comments" will cause all comments to be hidden and only the top "menue" box will be present
	FR #12420: User can now change the kind of displaying comments. Therefor the views "flat" and "threaded" are implemented.
	FR #12417: Comments can now be toggled
	FR #11923: Comment deletion is now done via overlay and ajax without breaking the workflow.
	FR #12232: Added an "Edit" option. The user is now able to edit existing comments using a fancy form.
	FR #12231: Added a "Reply" option. The user is now able to reply to existing comments.

  CHANGES:
	FR #12228: User name in the comment form is now clickable (user page)
	FR #12230: If no comment is present on the current page only an icon and the "Add comment" link are displayed
	FR #12230: Line breaks and line feeds are correct interpreted
	FR #12230: The final comment of the user should be formatted exactly the same as it looks like in the comment creation box
	FR #12233: Icons are now 16x16 px
	FR #12233: Reformatted the text block for the overall rating
	Migrated from Prototype to jQuery library.
	FR #12229: Removed 'goto comment' link.
	General Code changes

  BUGFIXES:
	Use 'formatnum' magic word to prevent crashes with different decimal separators 
	Issue 12226: After selecting a rating i cant deselect it
	Issue 12768: Format the average rating number to work correctly with german language settings
	Adjusted path for autocompletion icons


VERSION 1.20

  FEATURES:

  CHANGES: